# Resume-Analyzer-Back-end

./: .env.demo  docker-compose.yml
ai_backend/: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
ai_backend/config/: ai_models.py  celery_app.py
ai_backend/prompts/: prompt.py
ai_backend/routes/: analyze.py  chat.py
ai_backend/services/: rag_service.py
app_backend/: .env.demo  Dockerfile  README.md  index.ts  package.json
app_backend/config/: redis.ts
app_backend/prisma/: schema.prisma
app_backend/prisma/migrations/20260612155112_add_otp_and_verified/: migration.sql
app_backend/src/controllers/: resumeControllers.ts  userControllers.ts
app_backend/src/middleware/: authMiddleware.ts
app_backend/src/routes/: resumeRoutes.ts  userRoutes.ts
app_backend/src/utils/: mailer.ts
app_frontend/: package.json
app_frontend/src/: App.jsx  index.css  main.jsx
app_frontend/src/components/: Navbar.jsx  Toaster.jsx
app_frontend/src/hooks/: useLenis.js
app_frontend/src/pages/: About.jsx  AnalyseResume.jsx  AskAboutResume.jsx  Home.jsx  Login.jsx  NotFound.jsx  Signup.jsx  SignupEmail.jsx  SignupOtp.jsx  SignupPassword.jsx
app_frontend/src/services/: authApi.js  resumeApi.js
