[project]
name = "ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "huggingface-hub>=1.14.0",
    "json-repair>=0.59.10",
    "langchain>=1.3.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-huggingface>=1.2.2",
    "langchain-mistralai>=1.1.5",
    "langchain-openai>=1.2.1",
    "langchain-qdrant>=1.1.0",
    "openai>=2.36.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "qdrant-client>=1.18.0",
    "redis>=7.4.0",
    "requests>=2.34.0",
    "sentence-transformers>=5.5.0",
    "tavily-python>=0.7.26",
    "tiktoken>=0.12.0",
    "uvicorn>=0.46.0",
]
